2010-06-01  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_netdrive.cc (fhandler_netdrive::exists): Always free WNet
	resource if created.

2010-05-31  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.cc (cygheap_user::set_name): Allow to change the user name
	if it only differs by case.

2010-05-26  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_registry.cc (multi_wcstombs): New function.
	(fhandler_registry::fstat): Call multi_wcstombs for strings of type
	REG_MULTI_SZ.
	(fhandler_registry::fill_filebuf): Ditto.

2010-05-26  Christopher Faylor  <me+cygwin@cgf.cx>

	* hires.h (hires_base::reset): New function.
	(hires_us): Specify that hires_base is a public import.
	(hires_ms): Ditto.
	* times.cc (gtod): Move earlier in file.
	(settimeofday): Reset gtod so that base will be subsequently
	recalculated.

2010-05-26  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Don't try to handle remote reparse
	points as symlinks.  Explain why.

2010-05-26  Corinna Vinschen  <corinna@vinschen.de>

	* include/inttypes.h: Change PTR definitions to int to align with the
	stdint.h type definitions of intptr_t/uintptr_t.

2010-05-26  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (class fhandler_pty_master): Add master_thread member.
	* fhandler_tty.cc (fhandler_pty_master::close): Properly detach from
	master thread.
	(fhandler_pty_master::setup): Store cygthread pointer of pty master
	control thread in master_thread.  Don't zap thread handle.

2010-05-26  Kazuhiro Fujieda  <fujieda@acm.org>
	    Corinna Vinschen  <corinna@vinschen.de>

	* nlsfuncs.cc (__set_lc_time_from_win): Use LOCALE_SMONTHNAME1
	instead of LOCALE_SABBREVMONTHNAME1 in Japanese and Korean
	locales to get abbreviated month names.  Explain why.

2010-05-18  Kazuhiro Fujieda  <fujieda@acm.org>

	* environ.cc (regopt): Change the first argument to wide char string.
	(environ_init): Accommodate change to the first argument of regopt.